# OOP_vacancies_project_-pr4-

./: README.md  main.py  pyproject.toml
src/: API.py  file_manager.py  utils.py  vacancy.py
