[tool.poetry]
name = "kurs4"
version = "0.1.0"
description = ""
authors = ["<Nadezhda Ugay> <<777ugay@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
